crates/capsec/tests/compile_fail/context_bad_field.rs
/// #[capsec::context] rejects non-permission field types.
use capsec::prelude::*;

#[capsec::context]
struct Bad {
    x: String,
}

fn main() {}
